fix: options page horizontal scrolling

--- a/src/components/TradeTable/tradetable.module.css
+++ b/src/components/TradeTable/tradetable.module.css
@@ -8,6 +8,13 @@
 .buttons {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.buttons>div {
+  display: flex;
+  align-items: center;
   gap: 5px;
 }
 
